--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 				</tr>
 				<tr>
 					<td  style="font-size:16px; padding-left:50px; font-color:black; width:180px; ">নাম  </font>  </td>
-					<td><font style="font-size:18px;  font-weight:bold;">: সুরতন নেছা ওরফে ছুরত নেছা</font></td>
+					<td><font style="font-size:18px;  font-weight:bold;">: সুরতুন নেছা ওরফে ছুরাত নেছা</font></td>
 				</tr>
 					
 					
